--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,9 @@
   --lineColor: #c2bebe;
 }
 
-* {
-  margin: 0;
-  padding: 0;
+body {
+  background-color: lightblue;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .container {
@@ -42,6 +42,9 @@
   justify-content: center;
   gap: 30px;
   margin-top: 30px;
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 30px;
+  border-radius: 10px;
 }
 
 .information-item {
@@ -53,6 +56,7 @@
 .title {
   font-weight: bold;
   font-size: 20px;
+  color: rgb(4, 169, 224);
 }
 
 .description {
@@ -66,7 +70,7 @@
 .sub-title {
   font-weight: bold;
   font-size: 15px;
-  color: #000;
+  color: rgb(34, 175, 223);
 }
 
 .line {
